--- a/module3-solution/css/css-styles.css
+++ b/module3-solution/css/css-styles.css
@@ -1,201 +1,68 @@
-* {
-  box-sizing: border-box;
+body {
+  font-size: 16px;
+  /*color: #fff;*/
+  background-color: #D2691E;
+  /*font-family: 'Oxygen', sans-serif;*/
+  font-family: 'Lora', serif;
 }
 
-div#container {
-  /*background-color: #00FFFF;*/
-  position: relative;
-  /*top: 100px;*/
+/** HEADER **/
+#header-nav {
+  background-color: #808000;
+  border-radius: 0;
+  border: 0;
+}
+/*
+#logo-img {
+  background: url('../images/restaurant-logo_large.png') no-repeat;
+  width: 150px;
+  height: 150px;
+  margin: 10px 15px 10px 0;
+}*/
+
+.navbar-brand {
+  padding-top: 15px;
+}
+.navbar-brand h1 {
+  font-family: 'Lora', serif;
+  color: #2F4F4F;
+  font-size: 1.5em;
+  text-transform: uppercase;
+  font-weight: bold;
+  text-shadow: 1px 1px 1px #222;
+  margin-top: 0;
+  margin-bottom: 0;
+  line-height: .75;
+}
+.navbar-brand a:hover, .navbar-brand a:focus {
+  text-decoration: none;
 }
 
-h1 {
-  margin-bottom: 15px;
+#nav-list {
+  margin-top: 0px;
+}
+#nav-list a {
+  color: #2F4F4F;
   text-align: center;
 }
-
-
-p {
-  padding: 20px;
-  padding-top: 45px;
-  position: relative;
-  border: 1px solid black;
-  background-color: #A52A2A;
-  width: 90%;
-  height: 180px;
-  margin-right: 10px;
-  margin-left: 10px;
-  margin-bottom: 10px;
-  font-family: TimesNewRoman;
-  color: white;
-  text-align: left;
-  overflow: auto;
+#nav-list a:hover {
+  background: #FFDEAD;
+}
+#nav-list a span {
+  font-size: 1.4em;
 }
 
-#id1,#id2,#id3 {
-  position: absolute;
-  border: 1px solid black;
-  text-align: center;
-  width:  100px;
-  height: 20px;
-  top: 0px;
-  right: 42px;
-  /*box-sizing: content-box;*/
+h1, h3 {
+  color: #696969;
+  font-weight: bolder;
 }
 
-#id1 {
-  background-color: #A5682A;
-}
-
-#id2 {
+.Chicken {
   background-color: #DEB887;
+  margin-top: 25px;
+  color: #000000;
 }
 
-#id3 {
-  background-color: #5F9EA0;
-}
-
-/* Simple Responsive Framework. */
-.row {
+.container {
   width: 100%;
-  position: absolute;
-}
-
-/********** Large devices only (Desktop) **********/
-@media (min-width: 992px) {
-  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
-    float: left;
-  }
-
-  .col-lg-1 {
-    width: 8.33%;
-  }
-  .col-lg-2 {
-    width: 16.66%;
-  }
-  .col-lg-3 {
-    width: 25%;
-  }
-  .col-lg-4 {
-    width: 33.33%;
-  }
-  .col-lg-5 {
-    width: 41.66%;
-  }
-  .col-lg-6 {
-    width: 50%;
-  }
-  .col-lg-7 {
-    width: 58.33%;
-  }
-  .col-lg-8 {
-    width: 66.66%;
-  }
-  .col-lg-9 {
-    width: 74.99%;
-  }
-  .col-lg-10 {
-    width: 83.33%;
-  }
-  .col-lg-11 {
-    width: 91.66%;
-  }
-  .col-lg-12 {
-    width: 100%;
-  }
-}
-
-/********** Medium devices only (Tablet) **********/
-@media (min-width: 768px) and (max-width: 991px) {
-  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
-    float: left;
-  }
-
-  p {
-    width: 95%;
-  }
-
-  .col-md-1 {
-    width: 8.33%;
-  }
-  .col-md-2 {
-    width: 16.66%;
-  }
-  .col-md-3 {
-    width: 25%;
-  }
-  .col-md-4 {
-    width: 33.33%;
-  }
-  .col-md-5 {
-    width: 41.66%;
-  }
-  .col-md-6 {
-    width: 50%;
-  }
-  .col-md-7 {
-    width: 58.33%;
-  }
-  .col-md-8 {
-    width: 66.66%;
-  }
-  .col-md-9 {
-    width: 74.99%;
-  }
-  .col-md-10 {
-    width: 83.33%;
-  }
-  .col-md-11 {
-    width: 91.66%;
-  }
-  .col-md-12 {
-    width: 100%;
-  }
-}
-
-/********** Small devices only (Mobile) **********/
-@media (max-width: 767px) {
-  .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
-    float: left;
-  }
-
-  p {
-    width: 95%;
-  }
-
-  .col-sm-1 {
-    width: 8.33%;
-  }
-  .col-sm-2 {
-    width: 16.66%;
-  }
-  .col-sm-3 {
-    width: 25%;
-  }
-  .col-sm-4 {
-    width: 33.33%;
-  }
-  .col-sm-5 {
-    width: 41.66%;
-  }
-  .col-sm-6 {
-    width: 50%;
-  }
-  .col-sm-7 {
-    width: 58.33%;
-  }
-  .col-sm-8 {
-    width: 66.66%;
-  }
-  .col-sm-9 {
-    width: 74.99%;
-  }
-  .col-sm-10 {
-    width: 83.33%;
-  }
-  .col-sm-11 {
-    width: 91.66%;
-  }
-  .col-sm-12 {
-    width: 100%;
-  }
 }
